--- a/ToC/index.html
+++ b/ToC/index.html
@@ -1,62 +1,63 @@
 
         <html>
+
         <head>
             <title>Vizualizace »istoty Vody</title>
-            <meta http-equiv="refresh" content="5"> 
+            <meta http-equiv="refresh" content="2"> 
+
         </head>
         <body style="position:relative; width:100vw; height:100vh; margin:20; padding:20;">
-            <h1>»istota Vody: 100</h1>
-            <h1>»Ìslo kola: 32</h1>
-            <img src="ryba.png" style="position:absolute; left:2%; top:66%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:9%; top:41%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:23%; top:71%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:24%; top:41%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:9%; top:73%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:67%; top:22%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:87%; top:75%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:21%; top:24%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:16%; top:27%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:71%; top:63%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:4%; top:42%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:58%; top:65%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:80%; top:62%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:15%; top:36%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:88%; top:78%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:63%; top:66%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:75%; top:26%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:85%; top:39%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:25%; top:56%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:6%; top:30%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:70%; top:5%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:68%; top:0%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:73%; top:31%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:90%; top:23%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:30%; top:15%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:53%; top:14%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:45%; top:3%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:68%; top:71%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:30%; top:43%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:40%; top:81%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:34%; top:76%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:31%; top:37%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:16%; top:41%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:53%; top:82%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:62%; top:73%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:16%; top:74%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:1%; top:73%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:36%; top:23%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:78%; top:3%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:80%; top:75%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:41%; top:60%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:42%; top:42%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:44%; top:65%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:72%; top:19%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:2%; top:83%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:68%; top:71%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:13%; top:29%; width:50px; height:50px; transform:none;">
-<img src="ryba.png" style="position:absolute; left:88%; top:8%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:37%; top:50%; width:50px; height:50px; transform:scaleX(-1);">
-<img src="ryba.png" style="position:absolute; left:11%; top:34%; width:50px; height:50px; transform:scaleX(-1);">
+            <h1>»istota Vody: 44</h1>
+            <h1>»Ìslo kola: 12</h1>
+            <img src="ryba.png" class="fish" style="position:absolute; left:67%; top:46%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:42%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:58%; top:44%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:30%; top:30%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:28%; top:35%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:53%; top:81%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:57%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:73%; top:88%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:50%; top:59%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:7%; top:21%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:78%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:52%; top:85%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:65%; top:34%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:65%; top:34%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:9%; top:67%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:36%; top:47%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:68%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:76%; top:31%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:31%; top:36%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:89%; top:68%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:82%; top:57%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:88%; top:88%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:26%; top:43%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:26%; top:43%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:71%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:77%; top:39%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:29%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:1%; top:46%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:1%; top:46%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:36%; top:69%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:24%; top:26%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:66%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:72%; top:52%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:32%; top:55%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:32%; top:55%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:44%; top:83%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:82%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:34%; top:72%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:22%; top:20%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:67%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:69%; top:37%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:4%; top:85%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:16%; top:23%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:10%; top:48%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:5%; top:90%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:74%; top:39%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:20%; top:23%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:20%; top:23%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:50%; top:86%; width:70px; height:70px; transform:scaleX(-1);">
 
         </body>
         </html>
