--- a/ToC/index.html
+++ b/ToC/index.html
@@ -1,5 +1,5 @@
 
-        <html>
+        <html style="max-width: 100%; max-height: 100%; overflow-x: hidden;">
 
         <head>
             <title>Vizualizace »istoty Vody</title>
@@ -7,57 +7,78 @@
 
         </head>
         <body style="position:relative; width:100vw; height:100vh; margin:20; padding:20;">
-            <h1>»istota Vody: 44</h1>
-            <h1>»Ìslo kola: 12</h1>
-            <img src="ryba.png" class="fish" style="position:absolute; left:67%; top:46%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:42%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:58%; top:44%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:30%; top:30%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:28%; top:35%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:53%; top:81%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:57%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:73%; top:88%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:50%; top:59%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:7%; top:21%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:78%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:52%; top:85%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:65%; top:34%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:65%; top:34%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:9%; top:67%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:36%; top:47%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:68%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:76%; top:31%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:31%; top:36%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:89%; top:68%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:82%; top:57%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:88%; top:88%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:26%; top:43%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:26%; top:43%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:71%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:77%; top:39%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:29%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:1%; top:46%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:1%; top:46%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:36%; top:69%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:24%; top:26%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:66%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:72%; top:52%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:32%; top:55%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:32%; top:55%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:44%; top:83%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:82%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:34%; top:72%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:22%; top:20%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:67%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:69%; top:37%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:4%; top:85%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:16%; top:23%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:10%; top:48%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:5%; top:90%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:74%; top:39%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:20%; top:23%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:20%; top:23%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:50%; top:86%; width:70px; height:70px; transform:scaleX(-1);">
+            <h1>»istota Vody: 70</h1>
+            <h1>»Ìslo kola: 3</h1>
+            <img src="ryba.png" class="fish" style="position:absolute; left:69%; top:28%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:38%; top:33%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:71%; top:30%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:9%; top:23%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:83%; top:26%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:63%; top:31%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:87%; top:25%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:87%; top:65%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:35%; top:22%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:77%; top:48%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:20%; top:84%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:8%; top:84%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:81%; top:47%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:78%; top:31%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:26%; top:49%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:82%; top:37%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:30%; top:35%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:67%; top:32%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:8%; top:28%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:19%; top:79%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:80%; top:36%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:94%; top:80%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:92%; top:52%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:71%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:27%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:14%; top:48%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:27%; top:20%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:63%; top:42%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:94%; top:37%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:71%; top:39%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:39%; top:60%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:85%; top:44%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:36%; top:37%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:10%; top:25%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:91%; top:23%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:95%; top:77%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:72%; top:76%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:12%; top:35%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:75%; top:68%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:67%; top:83%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:30%; top:53%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:75%; top:27%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:53%; top:63%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:37%; top:69%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:28%; top:44%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:44%; top:39%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:34%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:34%; top:25%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:24%; top:23%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:60%; top:67%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:64%; top:38%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:31%; top:84%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:25%; top:51%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:51%; top:80%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:90%; top:55%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:93%; top:67%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:84%; top:84%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:20%; top:69%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:45%; top:75%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:13%; top:81%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:54%; top:20%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:59%; top:22%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:16%; top:40%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:23%; top:78%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:32%; top:49%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:38%; top:71%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:25%; top:21%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:66%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:63%; top:30%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:8%; top:74%; width:70px; height:70px; transform:none;">
 
         </body>
         </html>
