fixnutý bug - mutanti se vykreslují společně s rybami

--- a/ToC/index.html
+++ b/ToC/index.html
@@ -7,93 +7,28 @@
 
         </head>
         <body style="position:relative; width:100vw; height:100vh; margin:20; padding:20;">
-            <h1>»istota Vody: 85</h1>
-            <h1>»Ìslo kola: 1</h1>
-            <img src="ryba.png" class="fish" style="position:absolute; left:45%; top:39%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:5%; top:60%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:88%; top:37%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:27%; top:46%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:63%; top:65%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:36%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:93%; top:61%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:91%; top:52%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:77%; top:64%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:8%; top:50%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:48%; top:53%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:89%; top:56%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:69%; top:25%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:66%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:93%; top:48%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:8%; top:23%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:68%; top:81%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:27%; top:75%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:88%; top:44%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:21%; top:24%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:55%; top:44%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:46%; top:77%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:67%; top:28%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:74%; top:53%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:43%; top:49%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:91%; top:70%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:75%; top:48%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:69%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:21%; top:64%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:75%; top:47%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:47%; top:77%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:68%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:80%; top:30%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:63%; top:22%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:89%; top:28%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:53%; top:76%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:94%; top:30%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:87%; top:25%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:41%; top:63%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:60%; top:55%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:86%; top:79%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:38%; top:40%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:18%; top:76%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:64%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:41%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:7%; top:63%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:21%; top:40%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:88%; top:83%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:82%; top:81%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:10%; top:28%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:33%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:46%; top:42%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:15%; top:43%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:46%; top:29%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:33%; top:36%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:54%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:14%; top:41%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:87%; top:26%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:53%; top:51%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:62%; top:46%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:17%; top:60%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:91%; top:29%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:35%; top:41%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:77%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:8%; top:69%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:42%; top:79%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:69%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:15%; top:55%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:32%; top:78%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:70%; top:47%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:85%; top:56%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:28%; top:65%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:60%; top:74%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:52%; top:33%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:42%; top:26%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:66%; top:54%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:18%; top:52%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:19%; top:73%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:55%; top:83%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:55%; top:45%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:25%; top:37%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:67%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:5%; top:32%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:21%; top:60%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:69%; top:28%; width:70px; height:70px; transform:none;">
+            <h1>»istota Vody: 20</h1>
+            <h1>»Ìslo kola: 8</h1>
+            <img src="mutant.png" class="fish" style="position:absolute; left:75%; top:56%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:77%; top:35%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:51%; top:43%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:47%; top:76%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:55%; top:22%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:32%; top:52%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:70%; top:84%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:33%; top:59%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:30%; top:31%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:75%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:42%; top:30%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:24%; top:37%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:13%; top:46%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:6%; top:44%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:10%; top:48%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:80%; top:76%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:14%; top:74%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:51%; top:31%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:15%; top:66%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:20%; top:79%; width:70px; height:70px; transform:none;">
 
         </body>
         </html>
